# subwire

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
certs/: README.md
deploy/: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yaml
src/subwire/: __init__.py  auth.py  client.py  config.py  security.py  server.py
