[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subwire"
version = "0.1.0"
description = "A configurable HTTP/REST MCP server for homelab and external APIs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["mcp", "model-context-protocol", "http", "rest", "homelab", "api-client"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
subwire = "subwire.server:main"

[project.urls]
Homepage = "https://github.com/Corundex/subwire"
Issues = "https://github.com/Corundex/subwire/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/subwire"]
